@@ -15,14 +15,24 @@
  */
 package org.labkey.api.files;
 
+import org.apache.commons.lang3.SystemUtils;
 import org.apache.log4j.Logger;
 import org.imca_cat.pollingwatchservice.PathWatchService;
 import org.imca_cat.pollingwatchservice.PollingWatchService;
+import org.junit.Assert;
+import org.junit.Test;
+import org.labkey.api.collections.ConcurrentHashSet;
 import org.labkey.api.util.ContextListener;
 import org.labkey.api.util.ExceptionUtil;
+import org.labkey.api.util.FileUtil;
 import org.labkey.api.util.ShutdownListener;
+import org.labkey.api.util.StringUtilsLabKey;
+import org.labkey.api.writer.PrintWriters;
 
+import javax.annotation.Nullable;
+import java.io.File;
 import java.io.IOException;
+import java.io.PrintWriter;
 import java.nio.file.ClosedWatchServiceException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
@@ -32,14 +42,13 @@ import java.nio.file.WatchEvent;
 import java.nio.file.WatchEvent.Kind;
 import java.nio.file.WatchKey;
 import java.nio.file.WatchService;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicInteger;
 
 import static java.nio.file.StandardWatchEventKinds.ENTRY_CREATE;
 import static java.nio.file.StandardWatchEventKinds.ENTRY_DELETE;
@@ -86,43 +95,123 @@ public class FileSystemWatcherImpl implements FileSystemWatcher
         pollingThread.start();
     }
 
+    @Override
     @SafeVarargs
     public final void addListener(Path directory, FileSystemDirectoryListener listener, Kind<Path>... events) throws IOException
+    {
+        addListener(directory, listener, true, events);
+    }
+
+    @SafeVarargs
+    private void addListener(Path directory, FileSystemDirectoryListener listener, boolean ensureDirectoryDeleteListenerOnParent, Kind<Path>... events) throws IOException
     {
         // Associate a new PathListenerManager with this directory, if one doesn't already exist
         PathListenerManager plm = new PathListenerManager();
         PathListenerManager previous = _listenerMap.putIfAbsent(directory, plm);     // Atomic operation
-        String fileStoreType = Files.getFileStore(directory).type();
-        if (null != fileStoreType)
-            fileStoreType = fileStoreType.toLowerCase();
 
         // Register directory with the WatchService, if it's new
         if (null == previous)
         {
-            // ensure we catch variations such as both nfs and nfs4
-            if (null != fileStoreType && ( fileStoreType.startsWith("cifs") || fileStoreType.startsWith("smbfs") || fileStoreType.startsWith("nfs") ))
-            {
-                LOG.debug("Detected network file system type '" + fileStoreType + "'. Create polling file watcher service and register this directory there for directory: " + directory.toAbsolutePath().toString());
-                _pollingWatcher.register(directory, StandardWatchEventKinds.ENTRY_CREATE, StandardWatchEventKinds.ENTRY_DELETE, StandardWatchEventKinds.ENTRY_MODIFY);
-            }
-            else
-            {
-                LOG.debug("Detected local file system type '" + fileStoreType + "'. Register path with standard watcher service for directory: " + directory.toAbsolutePath().toString());
-                directory.register(_watcher, ENTRY_CREATE, ENTRY_DELETE, ENTRY_MODIFY);  // Register all events (future listener might request events that current listener doesn't)
-            }
+            registerWithWatchService(directory, plm);
         }
         else
         {
-            LOG.debug("Detected previously registered file watcher service for file system of type '" + fileStoreType + "'. for directory: " + directory.toAbsolutePath().toString());
             plm = previous;
+            LOG.debug("Detected previously registered file watcher service for file system of type '" + plm.getFileStoreType() + "'. for directory: " + directory.toAbsolutePath().toString());
         }
 
         // Add the listener and its requested events
         plm.addListener(listener, events);
+//        if (ensureDirectoryDeleteListenerOnParent)
+//        {
+//            ensureDeleteDirectoryListener(plm, directory);
+//        }
 
         LOG.debug("Registered a file listener on " + directory.toString());
     }
 
+    private void registerWithWatchService(Path directory, PathListenerManager plm) throws IOException
+    {
+        String fileStoreType = Files.getFileStore(directory).type();
+        if (null != fileStoreType)
+            fileStoreType = fileStoreType.toLowerCase();
+
+        final WatchKey watchKey;
+
+        // ensure we catch variations such as both nfs and nfs4
+        boolean pollingWatcher = null != fileStoreType && (fileStoreType.startsWith("cifs") || fileStoreType.startsWith("smbfs") || fileStoreType.startsWith("nfs"));
+        if (pollingWatcher)
+        {
+            LOG.debug("Detected network file system type '" + fileStoreType + "'. Create polling file watcher service and register this directory there for directory: " + directory.toAbsolutePath().toString());
+            watchKey = _pollingWatcher.register(directory, StandardWatchEventKinds.ENTRY_CREATE, StandardWatchEventKinds.ENTRY_DELETE, StandardWatchEventKinds.ENTRY_MODIFY);
+        }
+        else
+        {
+            LOG.debug("Detected local file system type '" + fileStoreType + "'. Register path with standard watcher service for directory: " + directory.toAbsolutePath().toString());
+            watchKey = directory.register(_watcher, ENTRY_CREATE, ENTRY_DELETE, ENTRY_MODIFY);  // Register all events (future listener might request events that current listener doesn't)
+        }
+
+        plm.setFileStoreType(fileStoreType);
+        plm.setPollingWatcher(pollingWatcher);
+        plm.setWatchKey(watchKey);
+    }
+
+    // This could be used to ensure we see directories where we have listeners getting deleted. But at least on Windows,
+    // WatchKey.reset() indicates when directories have been deleted, so this may not be necessary. Need to test on other
+    // file systems.
+    private void ensureDeleteDirectoryListener(PathListenerManager plm, Path directory) throws IOException
+    {
+        //noinspection SynchronizationOnLocalVariableOrMethodParameter
+        synchronized (plm)
+        {
+            if (!plm.isDirectoryDeleteListenerOnParent())
+            {
+                Path parent = directory.getParent();
+                if (null != parent)
+                {
+                    LOG.debug("Registering a directory delete listener for " + directory.toString() + " on " + parent);
+                    Path fileName = directory.getFileName();
+                    addListener(parent, new FileSystemDirectoryListener()
+                    {
+                        @Override
+                        public void entryCreated(Path directory, Path entry)
+                        {
+                        }
+
+                        @Override
+                        public void entryDeleted(Path directory, Path entry)
+                        {
+                            if (entry.equals(fileName))
+                            {
+                                LOG.debug("Directory deleted. Need to cancel its WatchKey and inform all its listeners.");
+                                PathListenerManager plm = handleDeletedDirectory(directory.resolve(entry));
+
+                                if (null != plm)
+                                    plm.getWatchKey().cancel();
+                            }
+                        }
+
+                        @Override
+                        public void entryModified(Path directory, Path entry)
+                        {
+                        }
+
+                        @Override
+                        public void overflow()
+                        {
+                        }
+                    }, false, ENTRY_DELETE);
+                }
+                plm.setDirectoryDeleteListenerOnParent();
+            }
+            else
+            {
+                LOG.debug("Already have a directory delete listener for " + directory.toString());
+            }
+        }
+    }
+
+    @Override
     public void removeListener(Path directory, FileSystemDirectoryListener listener)
     {
         PathListenerManager plm = _listenerMap.get(directory);
@@ -133,11 +222,10 @@ public class FileSystemWatcherImpl implements FileSystemWatcher
         }
     }
 
-
     // Not a daemon thread because listeners could be performing I/O and other tasks that are dangerous to interrupt.
     private class FileSystemWatcherThread extends Thread implements ShutdownListener
     {
-        WatchService _watcher;
+        private final WatchService _watcher;
 
         private FileSystemWatcherThread(String name, WatchService watcher)
         {
@@ -179,10 +267,13 @@ public class FileSystemWatcherImpl implements FileSystemWatcher
                     }
                     finally
                     {
-                        // Always reset the watchKey, even if a listener throws, otherwise we'll never see another event on this directory.
-                        // If watch key is no longer valid, then I guess we should remove the listener manager.
+                        // Always reset the watchKey, even if a listener throws, otherwise we'll never see another event
+                        // on this directory. If watch key is no longer valid, then it's probably been deleted.
                         if (!watchKey.reset() && null != watchedPath)
-                            _listenerMap.remove(watchedPath);        // TODO: create an event to notify listeners?
+                        {
+                            LOG.debug("WatchKey is invalid: " + watchedPath);
+                            handleDeletedDirectory(watchedPath);
+                        }
                     }
                 }
             }
@@ -222,12 +313,29 @@ public class FileSystemWatcherImpl implements FileSystemWatcher
         }
     }
 
+    private @Nullable PathListenerManager handleDeletedDirectory(Path deletedDirectory)
+    {
+        PathListenerManager plm = _listenerMap.remove(deletedDirectory);
+        if (null != plm)
+        {
+            plm.fireDirectoryDeleted(deletedDirectory);
+            if (Files.exists(deletedDirectory))
+                LOG.error("WatchKey is invalid but directory still exists: " + deletedDirectory);
+        }
+        return plm;
+    }
 
     // Manages all the listeners associated with a specific path
     private static class PathListenerManager
     {
         // CopyOnWriteArrayList is thread-safe for write and iteration, and reasonably efficient for small lists with high read/write ratio
         private final List<ListenerContext> _list = new CopyOnWriteArrayList<>();
+
+        private volatile String _fileStoreType;
+        private volatile WatchKey _watchKey;
+        private volatile boolean _pollingWatcher;
+
+        private boolean _directoryDeleteListenerOnParent = false;
 
         private void addListener(FileSystemDirectoryListener listener, Kind<Path>[] events)
         {
@@ -237,19 +345,54 @@ public class FileSystemWatcherImpl implements FileSystemWatcher
 
         private void removeListener(FileSystemDirectoryListener listener)
         {
-            for (ListenerContext listenerContext : _list)
-            {
-                if (listenerContext.getListener().equals(listener))
-                    _list.remove(listenerContext);
-            }
+            _list.removeIf(listenerContext -> listenerContext.getListener().equals(listener));
+        }
+
+        private String getFileStoreType()
+        {
+            return _fileStoreType;
+        }
+
+        private void setFileStoreType(String fileStoreType)
+        {
+            _fileStoreType = fileStoreType;
+        }
+
+        public boolean isPollingWatcher()
+        {
+            return _pollingWatcher;
+        }
+
+        public void setPollingWatcher(boolean pollingWatcher)
+        {
+            _pollingWatcher = pollingWatcher;
+        }
+
+        private WatchKey getWatchKey()
+        {
+            return _watchKey;
+        }
+
+        private void setWatchKey(WatchKey watchKey)
+        {
+            _watchKey = watchKey;
+        }
+
+        private boolean isDirectoryDeleteListenerOnParent()
+        {
+            return _directoryDeleteListenerOnParent;
+        }
+
+        private void setDirectoryDeleteListenerOnParent()
+        {
+            _directoryDeleteListenerOnParent = true;
         }
 
         private void fireEvents(WatchEvent<Path> event, Path watchedPath)
         {
             Kind<Path> kind = event.kind();
 
-            //noinspection RedundantCast -- IntelliJ is wrong; this Kind<?> cast is actually required
-            if (OVERFLOW == (Kind<?>)kind)
+            if (OVERFLOW == (Kind<?>) kind)
             {
                 LOG.info("Overflow! File system watcher events may have been lost.");
 
@@ -264,6 +407,11 @@ public class FileSystemWatcherImpl implements FileSystemWatcher
                     listenerContext.fireEvent(kind, watchedPath, entry);
             }
         }
+
+        private void fireDirectoryDeleted(Path directory)
+        {
+            _list.forEach(lc->lc.fireDirectoryDeleted(directory));
+        }
     }
 
     // Keeps track of a single listener and the events it requested
@@ -275,7 +423,7 @@ public class FileSystemWatcherImpl implements FileSystemWatcher
         private ListenerContext(FileSystemDirectoryListener listener, Kind<Path>[] events)
         {
             _listener = listener;
-            _events = new HashSet<>(Arrays.asList(events));
+            _events = Set.of(events);
         }
 
         private void fireEvent(Kind<Path> kind, Path watchedPath, Path entry)
@@ -298,9 +446,146 @@ public class FileSystemWatcherImpl implements FileSystemWatcher
             _listener.overflow();
         }
 
+        private void fireDirectoryDeleted(Path directory)
+        {
+            _listener.directoryDeleted(directory);
+        }
+
         public FileSystemDirectoryListener getListener()
         {
             return _listener;
+        }
+    }
+
+    public static class TestCase extends Assert
+    {
+        @Test
+        public void testFileWatchers() throws IOException, InterruptedException
+        {
+            File root = FileUtil.createTempDirectory("fileWatcherTest");
+            File testFolder = new File(root, "test");
+
+            // Do it twice to ensure that everything gets cleaned up on directory delete and a new watcher can be added
+            // to a new version of the same directory
+            test(testFolder);
+            test(testFolder);
+        }
+
+        private void test(File testFolder) throws IOException, InterruptedException
+        {
+            assertTrue(testFolder.mkdir());
+            Path testPath = testFolder.toPath();
+            FileSystemWatcher fsw = FileSystemWatchers.get();
+            assertTrue(fsw instanceof FileSystemWatcherImpl);
+            FileSystemWatcherImpl watcher = (FileSystemWatcherImpl)fsw;
+
+            Set<String> created = new ConcurrentHashSet<>();
+            Set<String> deleted = new ConcurrentHashSet<>();
+            Set<String> modified = new ConcurrentHashSet<>();
+            Set<String> directoryDeleted = new ConcurrentHashSet<>();
+            AtomicInteger overflow = new AtomicInteger(0);
+            AtomicInteger events = new AtomicInteger(0);
+
+            watcher.addListener(testPath, new FileSystemDirectoryListener()
+            {
+                @Override
+                public void entryCreated(Path directory, Path entry)
+                {
+                    created.add(entry.toString());
+                    events.incrementAndGet();
+                }
+
+                @Override
+                public void entryDeleted(Path directory, Path entry)
+                {
+                    deleted.add(entry.toString());
+                    events.incrementAndGet();
+                }
+
+                @Override
+                public void entryModified(Path directory, Path entry)
+                {
+                    modified.add(entry.toString());
+                    events.incrementAndGet();
+                }
+
+                @Override
+                public void directoryDeleted(Path directory)
+                {
+                    directoryDeleted.add(directory.toString());
+                    events.incrementAndGet();
+                }
+
+                @Override
+                public void overflow()
+                {
+                    overflow.incrementAndGet();
+                }
+            }, ENTRY_CREATE, ENTRY_DELETE, ENTRY_MODIFY);
+
+            PathListenerManager plm = watcher._listenerMap.get(testPath);
+            assertNotNull(plm);
+            assertEquals(1, plm._list.size());
+
+            File a = new File(testFolder, "a");
+            File b = new File(testFolder, "b");
+            File c = new File(testFolder, "c");
+
+            assertTrue(a.createNewFile());
+            assertTrue(b.createNewFile());
+            assertTrue(c.createNewFile());
+
+            try (PrintWriter pw = PrintWriters.getPrintWriter(a))
+            {
+                pw.println("Hello World");
+            }
+
+            try (PrintWriter pw = PrintWriters.getPrintWriter(c))
+            {
+                pw.println("Hello World");
+            }
+
+            assertTrue(a.delete());
+            assertTrue(b.delete());
+
+            FileUtil.deleteDir(testFolder);
+
+            // On Windows, modified events are called on delete as well, but apparently not on Linux
+            int expectedEventCount = SystemUtils.IS_OS_WINDOWS ? 14 : 10;
+            Set<String> expectedModified = SystemUtils.IS_OS_WINDOWS ? Set.of("a", "b", "c") : Set.of("a", "c");
+
+            waitForEvents(events, expectedEventCount);
+
+            assertEquals(3, created.size());
+            assertTrue(created.containsAll(Set.of("a", "b", "c")));
+            // Note: Modified is called on delete as well
+            assertEquals(expectedModified.size(), modified.size());
+            assertTrue(created.containsAll(expectedModified));
+            assertEquals(3, deleted.size());
+            assertTrue(created.containsAll(Set.of("a", "b", "c")));
+            assertEquals(1, directoryDeleted.size());
+            assertEquals(0, overflow.get());
+
+            plm = watcher._listenerMap.get(testPath);
+            assertNull(plm);
+        }
+
+        private void waitForEvents(AtomicInteger events, int targetCount) throws InterruptedException
+        {
+            int maxSleepSeconds = 10;
+            int i = 0;
+
+            while (events.get() < targetCount && i < maxSleepSeconds)
+            {
+                //noinspection BusyWait
+                Thread.sleep(1000);
+                i++;
+            }
+
+            LOG.info("Waiting for file watcher events took " + StringUtilsLabKey.pluralize(i, "second"));
+
+            LOG.info("Actual event count: " + events.get() + " vs. target: " + targetCount);
+            //assertEquals(expectedEventCount, events.get());
         }
     }
 }
